# pydanticforge

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  model_diff.yml  pypi_publish.yml  schema_monitor.yml
src/pydanticforge/: __init__.py  __main__.py  cli.py  json_schema.py  state.py
src/pydanticforge/diff/: semantic.py
src/pydanticforge/inference/: infer.py  lattice.py  types.py
src/pydanticforge/io/: files.py  stream.py
src/pydanticforge/modelgen/: __init__.py  emit.py  naming.py
src/pydanticforge/monitor/: drift.py  watcher.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_diff.py  test_drift.py  test_generator.py  test_io_files.py  test_json_schema.py  test_lattice.py  test_monitor.py  test_state.py
